manifests/contour-orig.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: contour
  name: contour
  namespace: contour
spec:
  selector:
    matchLabels:
      app: contour
  replicas: 2 
  template:
    metadata:
      labels:
        app: contour
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8002"
        prometheus.io/path: "/stats"
        prometheus.io/format: "prometheus"
    spec:
      containers:
      - image: gcr.io/heptio-images/contour:v0.10.0
        imagePullPolicy: Always
        name: contour
        command: ["contour"]
        args: 
        - serve 
        - --incluster
        - --envoy-external-http-port=8080
        - --envoy-external-https-port=8443
        - --envoy-service-http-port=8080
        - --envoy-service-https-port=8443
      - image: docker.io/envoyproxy/envoy:v1.9.0
        name: envoy
        ports:
        - containerPort: 8080
          name: http
          hostPort: 80
        - containerPort: 8443
          name: https
          hostPort: 443
        command: ["envoy"]
        args:
        - --config-path /config/contour.json
        - --service-cluster cluster0
        - --service-node node0
        - --log-level info
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8002
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - name: contour-config
          mountPath: /config
        lifecycle:
          preStop:
            exec:
              command: ["wget", "-qO-", "http://localhost:9001/healthcheck/fail"] 
      volumes:
      - name: contour-config
        emptyDir: {}
      dnsPolicy: ClusterFirst
      serviceAccountName: contour
      terminationGracePeriodSeconds: 30
      # The affinity stanza below tells Kubernetes to try hard not to place 2 of
      # these pods on the same node.
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: contour
              topologyKey: kubernetes.io/hostname
