manifests/ingress-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-system

---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: mountain-delegation
  namespace: ingress-system
spec:
  virtualhost:
    fqdn: mountains.octetz.com
  routes:
    - match: /
      delegate:
        name: mountains
        namespace: mountains

---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: lines-delegation
  namespace: ingress-system
spec:
  virtualhost:
    fqdn: lines.octetz.com
  routes:
    - match: /dmv
      delegate:
        name: lines
        namespace: lines
